force-app/main/default/objects/Membership__c/fields/Creating_Date__c.field-meta.xml
<CustomField>
    <fullName>Creating_Date__c</fullName>
    <description>This field shows when the user was created</description>
    <label>Creating Date</label>
    <type>DateTime</type>
</CustomField>