force-app/main/default/objects/Membership__c/fields/Is_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is customer</label>
    <type>Checkbox</type>
</CustomField>