force-app/main/default/objects/Membership__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <description>This field auto-generates a membership number, when a member is created</description>
    <inlineHelpText>This field auto-generates a membership number, when a member is created</inlineHelpText>
    <label>Membership Number</label>
    <type>AutoNumber</type>
</CustomField>