force-app/main/default/objects/Membership__c/fields/Paid_Membership__c.field-meta.xml
<CustomField>
    <fullName>Paid_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, it means that the customer is on a paid membership plan through Reepay (Set manually)</description>
    <label>Paid Membership</label>
    <type>Checkbox</type>
</CustomField>