force-app/main/default/objects/Membership__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Member phone.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>