force-app/main/default/objects/Membership__c/fields/Platform_Create_State__c.field-meta.xml
<CustomField>
    <fullName>Platform_Create_State__c</fullName>
    <label>Platform Create State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>NEW</label>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>