force-app/main/default/objects/Membership__c/fields/Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Profile_Link__c</fullName>
    <label>Profile Link</label>
    <type>Url</type>
</CustomField>