force-app/main/default/objects/Membership__c/fields/Responsible_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Lawyer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>