force-app/main/default/objects/Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Platform_Create_State__c</columns>
    <columns>Paid_Membership__c</columns>
    <columns>Profile_Link__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_Create_State__c</field>
        <operation>equals</operation>
        <value>OK</value>
    </filters>
    <label>All</label>
</ListView>