force-app/main/default/objects/Membership__c/listViews/All_created.listView-meta.xml
<ListView>
    <fullName>All_created</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Email__c</columns>
    <columns>Profile_Link__c</columns>
    <columns>Responsible_Lawyer__c</columns>
    <columns>Profile_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All created</label>
</ListView>