force-app/main/default/objects/Membership__c/listViews/All_New_Members.listView-meta.xml
<ListView>
    <fullName>All_New_Members</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_Create_State__c</field>
        <operation>equals</operation>
        <value>NEW</value>
    </filters>
    <label>All New Members</label>
</ListView>