force-app/main/default/objects/Membership__c/listViews/All_Pending_Members.listView-meta.xml
<ListView>
    <fullName>All_Pending_Members</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Platform_Create_State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Email__c</columns>
    <columns>Account__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Sign_up_Date__c</columns>
    <columns>Responsible_Lawyer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_Create_State__c</field>
        <operation>equals</operation>
        <value>PENDING</value>
    </filters>
    <label>All Pending Members</label>
</ListView>