force-app/main/default/objects/Membership__c/listViews/Memberships_with_Error.listView-meta.xml
<ListView>
    <fullName>Memberships_with_Error</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Platform_Create_State__c</columns>
    <columns>Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Responsible_Lawyer__c</columns>
    <columns>Lead__c</columns>
    <columns>Sign_up_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_Create_State__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <filters>
        <field>Email__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Memberships with Error</label>
</ListView>